--- a/sen2vec_environment.yml
+++ b/sen2vec_environment.yml
@@ -1,19 +1,25 @@
 name: sen2vec
 dependencies:
+- anaconda::beautifulsoup4=4.5.1=py35_0
 - boto=2.40.0=py35_0
 - bz2file=0.98=py35_0
 - cycler=0.10.0=py35_0
+- decorator=4.0.10=py35_0
 - freetype=2.5.5=1
 - gensim=0.12.4=np111py35_0
+- joblib=0.9.4=py35_0
 - libpng=1.6.22=0
+- libpq=9.5.4=0
 - libxml2=2.9.2=0
 - matplotlib=1.5.1=np111py35_0
 - mkl=11.3.3=0
+- networkx=1.11=py35_0
 - nltk=3.2.1=py35_0
 - numpy=1.11.1=py35_0
 - openssl=1.0.2h=1
 - pandas=0.18.1=np111py35_0
 - pip=8.1.2=py35_0
+- psycopg2=2.6.2=py35_0
 - pyparsing=2.1.4=py35_0
 - pyqt=4.11.4=py35_4
 - python=3.5.2=0
@@ -35,4 +41,7 @@ dependencies:
 - xz=5.2.2=0
 - zlib=1.2.8=3
 - pip:
+  - beautifulsoup4==4.5.1
   - smart-open==1.3.3
+prefix: /Users/tksaha/anaconda3/envs/sen2vec
+
