--- a/sen2vec_environment.yml
+++ b/sen2vec_environment.yml
@@ -1,13 +1,18 @@
 name: sen2vec
 dependencies:
-- anaconda::beautifulsoup4=4.5.1=py35_0
 - boto=2.40.0=py35_0
 - bz2file=0.98=py35_0
+- cairo=1.12.18=6
 - cycler=0.10.0=py35_0
 - decorator=4.0.10=py35_0
+- fontconfig=2.11.1=6
 - freetype=2.5.5=1
 - gensim=0.12.4=np111py35_0
+- glib=2.43.0=1
+- harfbuzz=0.9.39=1
 - joblib=0.9.4=py35_0
+- libffi=3.2.1=0
+- libgfortran=3.0.0=1
 - libpng=1.6.22=0
 - libpq=9.5.4=0
 - libxml2=2.9.2=0
@@ -18,7 +23,9 @@ dependencies:
 - numpy=1.11.1=py35_0
 - openssl=1.0.2h=1
 - pandas=0.18.1=np111py35_0
+- pango=1.39.0=1
 - pip=8.1.2=py35_0
+- pixman=0.32.6=0
 - psycopg2=2.6.2=py35_0
 - pyparsing=2.1.4=py35_0
 - pyqt=4.11.4=py35_4
@@ -43,5 +50,5 @@ dependencies:
 - pip:
   - beautifulsoup4==4.5.1
   - smart-open==1.3.3
-prefix: /Users/tksaha/anaconda3/envs/sen2vec
+prefix: /home/tksaha/anaconda3/envs/sen2vec
 
