--- a/sen2vec/word2vec/Makefile
+++ b/sen2vec/word2vec/Makefile
@@ -2,11 +2,14 @@ CC = gcc
 #Using -Ofast instead of -O3 might result in faster code, but is supported only by newer GCC versions
 CFLAGS = -lm -pthread -Ofast -march=native -Wall -funroll-loops -Wno-unused-result
 
-all: word2vec 
+all: word2vec retrofit_word2vec
 
 word2vec : word2vec.c
 	$(CC) word2vec.c -o word2vec $(CFLAGS)
+retrofit_word2vec: retrofit_word2vec.c 
+	$(CC) retrofit_word2vec.c -o retrofit_word2vec $(CFLAGS)
 
 
 clean:
 	rm -rf word2vec 
+	rm -rf retrofit_word2vec
