--- a/sen2vec_environment.yml
+++ b/sen2vec_environment.yml
@@ -1,5 +1,6 @@
 name: sen2vec
 dependencies:
+- anaconda::beautifulsoup4=4.5.1=py35_0
 - boto=2.40.0=py35_0
 - bz2file=0.98=py35_0
 - cairo=1.12.18=6
@@ -9,7 +10,9 @@ dependencies:
 - freetype=2.5.5=1
 - gensim=0.12.4=np111py35_0
 - glib=2.43.0=1
+- h5py=2.6.0=np111py35_2
 - harfbuzz=0.9.39=1
+- hdf5=1.8.17=1
 - joblib=0.9.4=py35_0
 - libffi=3.2.1=0
 - libgfortran=3.0.0=1
@@ -49,6 +52,12 @@ dependencies:
 - zlib=1.2.8=3
 - pip:
   - beautifulsoup4==4.5.1
+  - breadability==0.1.20
+  - cachetools==0.5.0
+  - chardet==2.3.0
+  - docopt==0.6.2
+  - lxml==3.6.4
   - smart-open==1.3.3
+  - sumy==0.4.1
 prefix: /home/tksaha/anaconda3/envs/sen2vec
 
