Updated Joint Learning code

--- a/sen2vec/word2vec/Makefile
+++ b/sen2vec/word2vec/Makefile
@@ -7,7 +7,7 @@ CFLAGS = -lm -pthread -Ofast -march=native -Wall -funroll-loops -Wno-unused-resu
 # CC = gcc -g -o0 
 # CFLAGS = -lm -pthread  -march=native -Wall -funroll-loops -Wno-unused-result
 
-all: word2vec retrofit_word2vec_one reg_sen2vec_net
+all: word2vec retrofit_word2vec_one reg_sen2vec_net joint_word_node2vec
 
 word2vec : word2vec.c
 	$(CC) word2vec.c -o word2vec $(CFLAGS)
@@ -15,6 +15,8 @@ retrofit_word2vec_one: retrofit_word2vec.c
 	$(CC) retrofit_word2vec.c -o retrofit_word2vec_one $(CFLAGS)
 reg_sen2vec_net: regularized_sen2vec_net.c 
 	$(CC) regularized_sen2vec_net.c -o  reg_sen2vec_net $(CFLAGS)
+joint_word_node2vec: joint_word2vec_node2vec.c 
+	$(CC) joint_word2vec_node2vec.c -o  joint_word_node2vec $(CFLAGS)
 
 
 
@@ -22,4 +24,5 @@ clean:
 	rm -rf word2vec 
 	rm -rf retrofit_word2vec_one
 	rm -rf reg_sen2vec_net
+	rm -rf joint_word_node2vec
 	
