--- a/sen2vec/word2vec/Makefile
+++ b/sen2vec/word2vec/Makefile
@@ -7,7 +7,7 @@ CFLAGS = -lm -pthread -Ofast -march=native -Wall -funroll-loops -Wno-unused-resu
 #CC = gcc -g -o0 
 #CFLAGS = -lm -pthread  -march=native -Wall -funroll-loops -Wno-unused-result
 
-all: word2vec retrofit_word2vec_one reg_sen2vec_net joint_word_node2vec
+all: word2vec retrofit_word2vec_one reg_sen2vec_net joint_word_node2vec joint_supervised
 
 word2vec : word2vec.c
 	$(CC) word2vec.c -o word2vec $(CFLAGS)
@@ -17,6 +17,8 @@ reg_sen2vec_net: regularized_sen2vec_net.c
 	$(CC) regularized_sen2vec_net.c -o  reg_sen2vec_net $(CFLAGS)
 joint_word_node2vec: joint_learner_unsupervised.c 
 	$(CC) joint_learner_unsupervised.c -o  joint_word_node2vec $(CFLAGS)
+joint_supervised: joint_learner_supervised.c 
+	$(CC) joint_learner_supervised.c -o  joint_supervised $(CFLAGS)
 
 
 
@@ -25,4 +27,5 @@ clean:
 	rm -rf retrofit_word2vec_one
 	rm -rf reg_sen2vec_net
 	rm -rf joint_word_node2vec
+	rm -rf joint_supervised
 	
