--- a/sen2vec/word2vec/Makefile
+++ b/sen2vec/word2vec/Makefile
@@ -4,10 +4,10 @@ CC = gcc
 CFLAGS = -lm -pthread -Ofast -march=native -Wall -funroll-loops -Wno-unused-result
 
 # for Debugging purposes, please turn on the following version of CC and CFLAGS
-#CC = gcc -g -o0 
-#CFLAGS = -lm -pthread  -march=native -Wall -funroll-loops -Wno-unused-result
+# CC = gcc -g -o0 
+# CFLAGS = -lm -pthread  -march=native -Wall -funroll-loops -Wno-unused-result
 
-all: word2vec retrofit_word2vec_one reg_sen2vec_net joint_word_node2vec joint_supervised
+all: word2vec retrofit_word2vec_one reg_sen2vec_net joint_word_node2vec joint_supervised joint_learner
 
 word2vec : word2vec.c
 	$(CC) word2vec.c -o word2vec $(CFLAGS)
@@ -19,6 +19,8 @@ joint_word_node2vec: joint_learner_unsupervised.c
 	$(CC) joint_learner_unsupervised.c -o  joint_word_node2vec $(CFLAGS)
 joint_supervised: joint_learner_supervised.c 
 	$(CC) joint_learner_supervised.c -o  joint_supervised $(CFLAGS)
+joint_learner: joint_learner.c
+	$(CC) joint_learner.c -o  joint_learner $(CFLAGS)
 
 
 
@@ -28,4 +30,5 @@ clean:
 	rm -rf reg_sen2vec_net
 	rm -rf joint_word_node2vec
 	rm -rf joint_supervised
+	rm -rf joint_learner
 	
