--- a/sen2vec/word2vec/Makefile
+++ b/sen2vec/word2vec/Makefile
@@ -1,7 +1,7 @@
 
 # Using -Ofast instead of -O3 might result in faster code, but is supported only by newer GCC versions
 CC = gcc 
-CFLAGS = -lm -pthread -Ofast -march=native -Wall -funroll-loops -Wno-unused-result
+CFLAGS = -lm -pthread -Ofast -march=native -Wall -funroll-loops -Wno-unused-result -Wmaybe-uninitialized
 
 # for Debugging purposes, please turn on the following version of CC and CFLAGS
 # CC = gcc -g -o0 
