--- a/sen2vec_environment.yml
+++ b/sen2vec_environment.yml
@@ -1,57 +1,58 @@
 name: sen2vec
+channels: !!python/tuple
+- defaults
 dependencies:
 - anaconda::beautifulsoup4=4.5.1=py35_0
-- boto=2.40.0=py35_0
-- bz2file=0.98=py35_0
-- cairo=1.12.18=6
-- cycler=0.10.0=py35_0
-- decorator=4.0.10=py35_0
-- fontconfig=2.11.1=6
-- freetype=2.5.5=1
-- gensim=0.12.4=np111py35_0
-- glib=2.43.0=1
-- h5py=2.6.0=np111py35_2
-- harfbuzz=0.9.39=1
-- hdf5=1.8.17=1
-- joblib=0.9.4=py35_0
-- libffi=3.2.1=0
-- libgfortran=3.0.0=1
-- libpng=1.6.22=0
-- libpq=9.5.4=0
-- libxml2=2.9.2=0
-- matplotlib=1.5.1=np111py35_0
+- anaconda::boto=2.40.0=py35_0
+- anaconda::bz2file=0.98=py35_0
+- anaconda::cairo=1.12.18=6
+- anaconda::cycler=0.10.0=py35_0
+- anaconda::decorator=4.0.10=py35_0
+- anaconda::fontconfig=2.11.1=6
+- anaconda::freetype=2.5.5=1
+- anaconda::gensim=0.12.4=np111py35_0
+- anaconda::glib=2.43.0=1
+- anaconda::h5py=2.6.0=np111py35_2
+- anaconda::harfbuzz=0.9.39=1
+- anaconda::hdf5=1.8.17=1
+- anaconda::joblib=0.9.4=py35_0
+- anaconda::libffi=3.2.1=0
+- anaconda::libgfortran=3.0.0=1
+- anaconda::libpng=1.6.22=0
+- anaconda::libpq=9.5.4=0
+- anaconda::libxml2=2.9.2=0
+- anaconda::matplotlib=1.5.1=np111py35_0
+- anaconda::networkx=1.11=py35_0
+- anaconda::nltk=3.2.1=py35_0
+- anaconda::numpy=1.11.1=py35_0
+- anaconda::openssl=1.0.2h=1
+- anaconda::pandas=0.18.1=np111py35_0
+- anaconda::pango=1.39.0=1
+- anaconda::pip=8.1.2=py35_0
+- anaconda::pixman=0.32.6=0
+- anaconda::psycopg2=2.6.2=py35_0
+- anaconda::pyparsing=2.1.4=py35_0
+- anaconda::pyqt=4.11.4=py35_4
+- anaconda::python=3.5.2=0
+- anaconda::python-dateutil=2.5.3=py35_0
+- anaconda::pytz=2016.6.1=py35_0
+- anaconda::qt=4.8.7=4
+- anaconda::readline=6.2=2
+- anaconda::requests=2.11.1=py35_0
+- anaconda::scikit-learn=0.17.1=np111py35_2
+- anaconda::scipy=0.18.0=np111py35_0
+- anaconda::seaborn=0.7.1=py35_0
+- anaconda::setuptools=25.1.6=py35_0
+- anaconda::sip=4.18=py35_0
+- anaconda::six=1.10.0=py35_0
+- anaconda::smart_open=1.3.3=py35_0
+- anaconda::sqlite=3.13.0=0
+- anaconda::tk=8.5.18=0
+- anaconda::wheel=0.29.0=py35_0
+- anaconda::xz=5.2.2=0
+- anaconda::zlib=1.2.8=3
 - mkl=11.3.3=0
-- networkx=1.11=py35_0
-- nltk=3.2.1=py35_0
-- numpy=1.11.1=py35_0
-- openssl=1.0.2h=1
-- pandas=0.18.1=np111py35_0
-- pango=1.39.0=1
-- pip=8.1.2=py35_0
-- pixman=0.32.6=0
-- psycopg2=2.6.2=py35_0
-- pyparsing=2.1.4=py35_0
-- pyqt=4.11.4=py35_4
-- python=3.5.2=0
-- python-dateutil=2.5.3=py35_0
-- pytz=2016.6.1=py35_0
-- qt=4.8.7=4
-- readline=6.2=2
-- requests=2.11.1=py35_0
-- scikit-learn=0.17.1=np111py35_2
-- scipy=0.18.0=np111py35_0
-- seaborn=0.7.1=py35_0
-- setuptools=25.1.6=py35_0
-- sip=4.18=py35_0
-- six=1.10.0=py35_0
-- smart_open=1.3.3=py35_0
-- sqlite=3.13.0=0
-- tk=8.5.18=0
-- wheel=0.29.0=py35_0
-- xz=5.2.2=0
-- zlib=1.2.8=3
 - pip:
-  - beautifulsoup4==4.5.1
   - breadability==0.1.20
   - cachetools==0.5.0
   - chardet==2.3.0
@@ -59,5 +60,6 @@ dependencies:
   - lxml==3.6.4
   - smart-open==1.3.3
   - sumy==0.4.1
-prefix: /home/tksaha/anaconda3/envs/sen2vec
+  - theano==0.8.2
+prefix: /home/tanay/anaconda3/envs/sen2vec
 
